:bug: Fixes docs on mdeditor on mobile

--- a/src/components/MDEditor/MDEditor.scss
+++ b/src/components/MDEditor/MDEditor.scss
@@ -68,6 +68,10 @@
                 z-index: 4;
 
                 background-color: $color-850;
+
+                &.mobile {
+                    width: 80vw;
+                }
             }
 
             &.active .docs {
