--- a/src/components/Snowflakes/SnowFlakes.scss
+++ b/src/components/Snowflakes/SnowFlakes.scss
@@ -8,7 +8,10 @@
     width: 100vw;
     height: 100vh;
 
-    overflow: hidden;
+    margin: 0;
+    padding: 0;
+
+    overflow: hidden;  // this needs to be hidden
     pointer-events: none;
     background: none !important;
 
