--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -21,7 +21,7 @@
     width: 100vw;
     height: 100vh;
 
-    overflow: hidden;
+    overflow: auto;
     pointer-events: none;
     background: none !important;
 
